--- a/.gitignore
+++ b/.gitignore
@@ -72,6 +72,9 @@ web_modules/
 .env
 .env.test
 
+# output directory
+public
+
 # parcel-bundler cache (https://parceljs.org/)
 .cache
 .parcel-cache
